feat: hien thi luot xem trang chi tiet mach va dong bo chi 1 form binh luan mo
